Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46907

kinfo_getproc undefined symbol

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.5.1
    • 5.5.0 RC
    • Core: I/O
    • None
    • 49631eaaf9aabbb71f002c64686a98e4621485bb

    Description

      Missing or undefined symbol "kinfo_getproc" on FreeBSD 10.1 in Core/IO.
      So, header <libutil.h> should be included in "qtbase/src/corelib/io/qlockfile_unix.cpp" and "libutil" added to link libraries.

      used configure options:
      ./configure -prefix $QTDIR -release -opensource -platform unsupported/freebsd-clang -qt-xcb -qt-pcre -confirm-license -qt-sql-ibase -qt-sql-sqlite -qt-sql-psql -c++11 -l execinfo -l util

      Attachments

        For Gerrit Dashboard: QTBUG-46907
        # Subject Branch Project Status CR V

        Activity

          People

            buddenha Oswald Buddenhagen
            qtpewpew Mr. M
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes